# ContactListViewer

./: .gitignore  CMakeLists.txt  README.md
ContactListViewer.app/Contents/: Info.plist
ContactListViewer.app/Contents/MacOS/: ContactListViewer
Header/: contact.h  contactlistprovider.h  database.h  mainwindow.h
Resources/: gridviewmodel.qml  listviewmodel.qml  viewmodel.qml  viewmodel.qrc
Source/: contact.cpp  contactlistprovider.cpp  database.cpp  main.cpp  mainwindow.cpp
